Revise README for Java multithreading projects
Updated the README to reflect new project structure and added details about Traffic Light Synchronization Simulation.